0.9
- Added secrets
- Daemons
	- Renamed "Daemon Core" hullmod to "Daemonic Heart"
	- Removed innate damage bonus to cruisers and capitals
	- Enrage function now reduces range 
	- Reworked the effects of Daemonic Heart and Hel Carapace/Plating
	- Redid some of the paintjobs
- Made some updates to Legio Rising bounty
- Made Legio a little less invasion-happy
- Updated Legio fleet doctrine
	- Fleets should now feature fewer pirate-grade ships
	- Added a number of additional lowtech blueprints
	- Blackwatch now has limited access to GH hulls
- Added Daemon AI Cores
- Improved Legio Tyranny description
- Reduced minimum cycle for most HVBs
- Hel Scaith
	- Can turn a little better again
	- Shield arc 120 -> 270
	- Armor 900 -> 1400
- Hel Hound
	- Top speed 200 -> 180
	- Reduced system acceleration buff
	- System cooldown 12s -> 18s
	- Armor 400 -> 300
	- Module armor 500 -> 300
- Hel Dominator
	- Shield arc 360 -> 270
	- Changed to front shield
	- HP 14000 -> 12000
- Hel Kodai
	- Top speed 80 -> 70
	- Shield arc 240 -> 120
	- Turn rate 30 -> 25
- Hel Champion
	- Top speed 70 -> 60
- Hel Sunder
	- Hitpoints 4000 -> 5000
- Hel Manticore
	- Hitpoints 5000 -> 6000
- Miasma
	- Wing size 4 -> 3
	- HP 200 -> 250
- Nirvana
	- Burn 9 -> 7
	- PPT 660 -> 600
	- System duration 15s -> 10s
	- System cooldown 30s -> 25s
	- Hidden post-vent effect removed
- Providence
	- DP 45 -> 40
- Samsara / Karma
	- Burn 9 -> 8
- Rigveda
	- Burn 10 -> 9
- Cordite
	- DP 25 -> 20
- Kupferflug Regalia
	- Lichtkanone damage per shot 60 -> 50
	- Same efficiency and RoF
- Karion battery
	- Ammo, regen and burst size doubled
- Kupferflug Regalia
	- Micro Strahlfaust rate of fire greatly increased, ammo limitation added

	

0.8.666a
- Fixed Flare missing automated hullmod
- Fixed string errors
- Fixed unintended Nex dependency


0.8.666
- Added Hel Sunder
- Added Hel Hound
- Added Hel Kodai
- Added Raba-class Mining Barge
- Added Equinox Remnant Battlecarrier
- Added Flare Remnant Destroyer